# boardman

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
boardman/: cli.py  cmd_collect.py  cmd_deploy.py  cmd_detect.py  cmd_get_mpy_compiler.py  cmd_mpy_compile.py  config.py  constants.py  tools.py
