[tool.poetry]
name = "boardman"
version = "0.1.0"
description = "MicroPython deployment tool"
authors = ["Igor Melnyk <liminspace@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/liminspace/boardman"
repository = "https://github.com/liminspace/boardman"
keywords = ["micropython", "Raspberry Pi Pico"]
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    'Programming Language :: Python :: 3',
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
boardman = "boardman.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
adafruit-ampy = "^1.1.0"
pydantic = "^1.10.2"
pyyaml = "^6.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 108
py_version = 39

[tool.black]
line-length = 108
target-version = ["py310"]
